--- a/src/app/modules/task-flow/components/task-item/task-item.html
+++ b/src/app/modules/task-flow/components/task-item/task-item.html
@@ -1,1 +1,20 @@
-<p>task-item works!</p>
+<div
+  class="flex justify-between px-2 border-gray-200 border shadow-sm p-4 rounded-xl bg-white"
+>
+  <div>
+    <div matListItemTitle>{{ task.description }}</div>
+    <div class="text-gray-300" matListItemLine>
+      {{ task.createdDate | date:'dd/MM/yyyy' }}
+    </div>
+  </div>
+  <div class="flex gap-2 items-center">
+    <mat-icon
+      (click)="onComplete.emit(task.id)"
+      class="cursor-pointer !text-blue-300 hover:!text-blue-600"
+      >check</mat-icon
+    >
+    <mat-icon class="cursor-pointer !text-red-300 hover:!text-red-700"
+      >deleted</mat-icon
+    >
+  </div>
+</div>
