feat: add icon menu and map icon components, implement task menu with edit and delete options

--- a/src/app/modules/task-flow/components/task-item/task-item.html
+++ b/src/app/modules/task-flow/components/task-item/task-item.html
@@ -8,30 +8,20 @@
       </h3>
     </div>
     <div>
-      <button class="w-5 h-5 outline-none focus:outline-none cursor-pointer">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-          <g
-            id="SVGRepo_tracerCarrier"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          ></g>
-          <g id="SVGRepo_iconCarrier">
-            <path
-              d="M7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10C6.10457 10 7 10.8954 7 12Z"
-              fill="#1C274C"
-            ></path>
-            <path
-              d="M14 12C14 13.1046 13.1046 14 12 14C10.8954 14 10 13.1046 10 12C10 10.8954 10.8954 10 12 10C13.1046 10 14 10.8954 14 12Z"
-              fill="#1C274C"
-            ></path>
-            <path
-              d="M21 12C21 13.1046 20.1046 14 19 14C17.8954 14 17 13.1046 17 12C17 10.8954 17.8954 10 19 10C20.1046 10 21 10.8954 21 12Z"
-              fill="#1C274C"
-            ></path>
-          </g>
-        </svg>
-      </button>
+      <div class="relative inline-block text-left">
+        <button
+          class="w-6 h-6 text-gray-500 outline-none focus:outline-none cursor-pointer"
+          (click)="toggleMenu()"
+        >
+          <app-map-icon nameIcon="menu"></app-map-icon>
+        </button>
+        @if (openMenu()) {
+        <app-task-menu
+          (onClickOption)="handleChangeOption($event)"
+          class="absolute right-0"
+        ></app-task-menu>
+        }
+      </div>
     </div>
   </div>
   <div class="flex flex-col h-20 overflow-hidden white text-gray-400">
