--- a/src/app/modules/task-flow/components/task-list/task-list.html
+++ b/src/app/modules/task-flow/components/task-list/task-list.html
@@ -32,7 +32,10 @@
   <div class="flex flex-col flex-1 overflow-hidden px-2 h-full">
     <div class="overflow-y-auto flex-1 flex flex-col gap-4 pr-2">
       @for(task of tasks();track task.id){
-      <app-task-item [task]="task"></app-task-item>
+      <app-task-item
+        [task]="task"
+        (onSelectedOption)="handleChangeOption($event)"
+      ></app-task-item>
       }@empty {
       <div class="flex justify-center items-center flex-col h-full gap-4">
         <div class="w-10 h-10">
