feat: add IconClose component with SVG and update SharedModule for integration

--- a/src/app/modules/shared/components/icon/map-icon/map-icon.html
+++ b/src/app/modules/shared/components/icon/map-icon/map-icon.html
@@ -1,3 +1,5 @@
 @switch (nameIcon()) { @case ('menu') {
 <app-icon-menu></app-icon-menu>
+} @case('close') {
+<app-icon-close></app-icon-close>
 } }
