--- a/src/app/modules/main/layouts/main-layout/main-layout.html
+++ b/src/app/modules/main/layouts/main-layout/main-layout.html
@@ -4,13 +4,13 @@
   >
     <h3 class="text-2xl text-text">Road Map</h3>
   </div>
-  <div class="flex">
+  <div class="flex relative">
     <nav class="bg-white border-r border-r-gray-100 shadow-md px-5 w-52 h-dvh">
       <ul class="mt-10 space-y-4 w-full">
         <li
           class="text-sm w-full bg-blue-300 text-white rounded-xl text-center px-5 py-2"
         >
-          Road Map
+          Dashboard
         </li>
         <li
           class="text-sm w-full bg-blue-300 text-white rounded-xl text-center px-5 py-2"
@@ -20,19 +20,26 @@
         <li
           class="text-sm w-full bg-blue-300 text-white rounded-xl text-center px-5 py-2"
         >
-          Road Map
+          Users
         </li>
         <li
           class="text-sm w-full bg-blue-300 text-white rounded-xl text-center px-5 py-2"
         >
-          Road Map
+          Settings
         </li>
         <li
           class="text-sm w-full bg-blue-300 text-white rounded-xl text-center px-5 py-2"
         >
-          Road Map
+          Help
         </li>
       </ul>
+      <div class="absolute bottom-0 h-10">
+        <button
+          class="w-full text-sm bg-red-500 text-white rounded-xl text-center px-5 py-2 mb-4"
+        >
+          Logout
+        </button>
+      </div>
     </nav>
     <main class="flex-1 overflow-hidden">
       <router-outlet></router-outlet>
